[gd_scene load_steps=7 format=3 uid="uid://b7wobq0ndm35"]

[ext_resource type="Script" uid="uid://btl68wj2dmivk" path="res://src/ui_widgets/color_configuration_popup.gd" id="1_j0oms"]
[ext_resource type="Texture2D" uid="uid://dr2erka82g6j4" path="res://assets/icons/Edit.svg" id="2_y6afs"]
[ext_resource type="FontFile" uid="uid://clpf84p1lfwlp" path="res://assets/fonts/Font.ttf" id="3_wd5vj"]
[ext_resource type="Script" uid="uid://1hox6gd5pxku" path="res://src/ui_widgets/BetterLineEdit.gd" id="4_u07gm"]
[ext_resource type="PackedScene" uid="uid://5f8uxavn1or1" path="res://src/ui_widgets/color_edit.tscn" id="5_idufj"]
[ext_resource type="Texture2D" uid="uid://cj5x2ti8150ja" path="res://assets/icons/Delete.svg" id="6_50dbg"]

[node name="ColorConfigurationPopup" type="PanelContainer"]
custom_minimum_size = Vector2(128, 40)
anchors_preset = -1
offset_right = 4.0
offset_bottom = 4.0
theme_type_variation = &"SpaciousPanel"
script = ExtResource("1_j0oms")

[node name="ConfigureContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="TopContainer" type="CenterContainer" parent="ConfigureContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="LabelContainer" type="HBoxContainer" parent="ConfigureContainer/TopContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="ColorLabel" type="Label" parent="ConfigureContainer/TopContainer/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="EditButton" type="Button" parent="ConfigureContainer/TopContainer/LabelContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
icon = ExtResource("2_y6afs")

[node name="NameEdit" type="LineEdit" parent="ConfigureContainer/TopContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 1
theme_override_fonts/font = ExtResource("3_wd5vj")
alignment = 1
max_length = 30
script = ExtResource("4_u07gm")

[node name="BottomContainer" type="HBoxContainer" parent="ConfigureContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="ColorEdit" parent="ConfigureContainer/BottomContainer" instance=ExtResource("5_idufj")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DeleteButton" type="Button" parent="ConfigureContainer/BottomContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("6_50dbg")

[connection signal="pressed" from="ConfigureContainer/TopContainer/LabelContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="ConfigureContainer/BottomContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
